[gd_scene load_steps=5 format=2]

[ext_resource path="res://edit/edit.gd" type="Script" id=1]
[ext_resource path="res://edit/rune.tscn" type="PackedScene" id=2]
[ext_resource path="res://edit/spell_button.gd" type="Script" id=3]
[ext_resource path="res://edit/loadout_button.gd" type="Script" id=4]

[node name="Edit" type="Node"]
script = ExtResource( 1 )

[node name="runes" type="Label" parent="."]
margin_left = 6.0
margin_top = 58.0001
margin_right = 136.0
margin_bottom = 72.0001
text = "runes - rune points: "

[node name="Health" parent="runes" instance=ExtResource( 2 )]
margin_top = 100.0
margin_bottom = 114.0
text = "Health"
rune_cost = 2

[node name="Smaller" parent="runes" instance=ExtResource( 2 )]
margin_left = 149.641
margin_top = 101.36
margin_right = 189.641
margin_bottom = 115.36
text = "Smaller"
rune_cost = 2

[node name="Back" type="Button" parent="."]
margin_left = 604.461
margin_top = 496.337
margin_right = 705.461
margin_bottom = 516.337
text = "back and save"

[node name="Skill0" type="Button" parent="."]
margin_left = 21.2102
margin_top = 368.149
margin_right = 71.2102
margin_bottom = 388.149
toggle_mode = true
text = "skill 1"

[node name="Skill1" type="Button" parent="."]
margin_left = 222.559
margin_top = 369.377
margin_right = 272.559
margin_bottom = 389.377
toggle_mode = true
text = "skill 2"

[node name="Skill2" type="Button" parent="."]
margin_left = 404.264
margin_top = 366.921
margin_right = 454.264
margin_bottom = 386.921
toggle_mode = true
text = "skill 3"

[node name="Loadouts" type="OptionButton" parent="."]
margin_left = 194.0
margin_top = 6.0
margin_right = 356.0
margin_bottom = 57.0
rect_scale = Vector2( 0.986645, 0.6994 )
text = "Loadouts"
selected = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skills" type="ItemList" parent="."]
margin_left = 170.866
margin_top = 536.292
margin_right = 330.866
margin_bottom = 617.292
rect_scale = Vector2( 0.99488, 1.2834 )
items = [ "fiver", null, false, "basic", null, false ]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Skill0" to="." method="_on_Skill0_pressed"]
[connection signal="pressed" from="Skill1" to="." method="_on_Skill1_pressed"]
[connection signal="pressed" from="Skill2" to="." method="_on_Skill2_pressed"]
[connection signal="item_selected" from="Loadouts" to="Loadouts" method="_on_Loadouts_item_selected"]
[connection signal="item_selected" from="Skills" to="Skills" method="_on_Skills_item_selected"]
